dev live 샘플 코드 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".TransparentActivity"
+            android:exported="true"
+            android:label="mbti answer"
+            android:theme="@style/TransparentActivityTheme" />
     </application>
 
 </manifest>
